fixed margin spacing

--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ body {
     font-size: 0.875rem;
     font-weight: 600;
     color: #C4F82A;
-    margin-bottom: 24px;
+    margin-bottom: 26px;
 }
 
 .user-bio {
